[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Floor.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/World.gd" type="Script" id=3]
[ext_resource path="res://scenes/HitObjects.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/font/BebasNeue-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://scenes/button_theme.tres" type="Theme" id=6]
[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=7]

[sub_resource type="BoxShape" id=2]
extents = Vector3( 6.25308, 4.24265, 1.70688 )

[sub_resource type="Environment" id=3]
background_mode = 1
background_color = Color( 0.705882, 0.705882, 0.705882, 0.682353 )
background_energy = 0.0
ambient_light_color = Color( 0.980392, 0.980392, 0.980392, 1 )
ambient_light_energy = 3.31
fog_enabled = true
fog_color = Color( 0.764706, 0.768627, 0.768627, 1 )
fog_sun_color = Color( 0.964706, 0.654902, 0.168627, 1 )
fog_depth_begin = 80.0
fog_depth_end = 90.0
fog_depth_curve = 0.378931
fog_transmit_curve = 1.41421
fog_height_enabled = true
fog_height_min = 0.7
dof_blur_far_enabled = true
dof_blur_far_distance = 44.69
dof_blur_far_transition = 556.2
dof_blur_far_amount = 0.14
dof_blur_near_enabled = true
glow_intensity = 1.66

[sub_resource type="BoxShape" id=4]

[sub_resource type="DynamicFont" id=7]
size = 60
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=8]
size = 100
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="Theme" id=9]
default_font = SubResource( 8 )
Label/colors/font_color = Color( 0.419608, 0.776471, 0.917647, 1 )
Label/styles/normal = null

[node name="World" type="Spatial"]
script = ExtResource( 3 )
HitObjects = ExtResource( 4 )

[node name="Player" parent="." instance=ExtResource( 1 )]
transform = Transform( 1.2, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 7.75616 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.993657, 0.112457, 0, -0.112457, 0.993657, -0.0388412, 11.1737, 24.4079 )
current = true

[node name="SpawnPoints" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6499, -47.545 )

[node name="P1" type="Position3D" parent="SpawnPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6.64654, 0, -46.782 )

[node name="P2" type="Position3D" parent="SpawnPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.207118, 0, -46.782 )

[node name="P3" type="Position3D" parent="SpawnPoints"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6.78803, 0, -46.782 )

[node name="Timer" type="Timer" parent="SpawnPoints"]

[node name="DelArea" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="DelArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.105888, 0.746415, 17.0138 )
shape = SubResource( 2 )

[node name="Floor" parent="." instance=ExtResource( 2 )]
transform = Transform( 1.4, 0, 0, 0, 1.003, 0, 0, 0, 2.303, 0, 0, -98.7928 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 3 )

[node name="Wall" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 20, 0, 0, 0, 131.112, -12.6502, 18.0352, -115.24 )
visible = false

[node name="CollisionShape" type="CollisionShape" parent="Wall"]
shape = SubResource( 4 )

[node name="Wall2" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 20, 0, 0, 0, 131.112, 11.3656, 18.0352, -115.24 )
visible = false

[node name="CollisionShape" type="CollisionShape" parent="Wall2"]
shape = SubResource( 4 )

[node name="ScoreTimer" type="Timer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
visible = false
margin_left = 16.0
margin_top = 25.0
margin_right = 176.0
margin_bottom = 97.0
custom_colors/font_color = Color( 0.419608, 0.776471, 0.917647, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "Score: 0"

[node name="MainMenu" type="CanvasLayer" parent="."]
pause_mode = 2
script = ExtResource( 7 )

[node name="Control" type="Control" parent="MainMenu"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="MainMenu/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 4.28
margin_left = 343.0
margin_top = -10.0
margin_right = 642.0
margin_bottom = -41.2
theme = SubResource( 9 )
text = "CUBE RUN"
align = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 367.0
margin_top = 220.0
margin_right = 617.0
margin_bottom = 360.0
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
custom_constants/separation = 20
alignment = 1

[node name="Play" type="Button" parent="MainMenu/Control/VBoxContainer"]
margin_right = 250.0
margin_bottom = 60.0
size_flags_vertical = 2
size_flags_stretch_ratio = 0.0
theme = ExtResource( 6 )
text = "PLAY"

[node name="Quit" type="Button" parent="MainMenu/Control/VBoxContainer"]
margin_top = 80.0
margin_right = 250.0
margin_bottom = 140.0
theme = ExtResource( 6 )
text = "QUIT"

[node name="Tween" type="Tween" parent="MainMenu"]

[connection signal="timeout" from="SpawnPoints/Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="DelArea" to="." method="_on_Area2_body_entered"]
[connection signal="pressed" from="MainMenu/Control/VBoxContainer/Play" to="MainMenu" method="_on_Play_pressed"]
[connection signal="pressed" from="MainMenu/Control/VBoxContainer/Quit" to="MainMenu" method="_on_Quit_pressed"]
